# gonnect

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .qmllint.ini  .releaserc.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  appversion.cpp.in  conanfile.py  distrobox.ini  flatpak-builder.distrobox.ini  sample.conf
emoji/: CMakeLists.txt  EmojiLoader.cpp  EmojiLoader.h  main.cpp
packaging/: CMakeLists.txt
src/: AppSettings.h  Application.cpp  Application.h  AuthManager.cpp  AuthManager.h  CMakeLists.txt  ErrorBus.cpp  ErrorBus.h  GlobalCallState.cpp  GlobalCallState.h  GlobalInfo.cpp  GlobalInfo.h  GlobalMuteState.cpp  GlobalMuteState.h  ICallState.cpp  ICallState.h  KeychainSettings.cpp  KeychainSettings.h  MSOAuthManager.cpp  MSOAuthManager.h  MSOAuthManagerConfig.h.in  Main.qml  MainPageSelection.h  MuteSyncGuard.h  PluginManager.cpp  PluginManager.h  ReadOnlyConfdSettings.cpp  ReadOnlyConfdSettings.h  SecretResponse.h  SelectionState.cpp  SelectionState.h  StateManager.cpp  StateManager.h  Ticker.cpp  Ticker.h  UISettings.cpp  UISettings.h  application.qrc  gonnect.rc  icons.qrc.in  (+3 more)
src/calendar/: DateEvent.cpp  DateEvent.h  DateEventFeederManager.cpp  DateEventFeederManager.h  DateEventManager.cpp  DateEventManager.h  IDateEventFeeder.h  IDateEventFeederFactory.h
src/chat/: AllChatProvidersRoomProxyModel.cpp  AllChatProvidersRoomProxyModel.h  AllChatProvidersRoomSearchProxyModel.cpp  AllChatProvidersRoomSearchProxyModel.h  ChatConnectorManager.cpp  ChatConnectorManager.h  ChatManager.cpp  ChatManager.h  ChatMessage.cpp  ChatMessage.h  ChatMessageContentAudioFile.h  ChatMessageContentFile.cpp  ChatMessageContentFile.h  ChatMessageContentImage.cpp  ChatMessageContentImage.h  ChatMessageContentPart.cpp  ChatMessageContentPart.h  ChatMessageContentText.cpp  ChatMessageContentText.h  ChatMessageContentUserStateChange.cpp  ChatMessageContentUserStateChange.h  ChatMessageContentVideoFile.cpp  ChatMessageContentVideoFile.h  ChatMessageReaction.cpp  ChatMessageReaction.h  ChatMessageSearchIndexer.cpp  ChatMessageSearchIndexer.h  ChatMessageSearchModel.cpp  ChatMessageSearchModel.h  ChatMessageSearchPreprocessor.cpp  ChatMessageSearchPreprocessor.h  ChatMessageSearchProvider.cpp  ChatMessageSearchProvider.h  ChatModel.cpp  ChatModel.h  ChatProxyModel.cpp  ChatProxyModel.h  ChatRoomModel.cpp  ChatRoomModel.h  ChatRoomProxyModel.cpp  (+66 more)
src/conference/: ConferenceChatMessage.cpp  ConferenceChatMessage.h  ConferenceParticipant.cpp  ConferenceParticipant.h  ConferenceUser.cpp  ConferenceUser.h  IConferenceConnector.h
src/contacts/: AddressBook.cpp  AddressBook.h  AddressBookManager.cpp  AddressBookManager.h  AvatarManager.cpp  AvatarManager.h  BlockInfo.cpp  BlockInfo.h  CardDAVAddressBookFeeder.cpp  CardDAVAddressBookFeeder.h  Contact.cpp  Contact.h  ContactSerializer.cpp  ContactSerializer.h  CsvFileAddressBookFeeder.cpp  CsvFileAddressBookFeeder.h  EmergencyContact.cpp  EmergencyContact.h  EmergencyContactsModel.cpp  EmergencyContactsModel.h  FuzzyCompare.cpp  FuzzyCompare.h  IAddressBookFactory.h  IAddressBookFeeder.h  LDAPAddressBookFeeder.cpp  LDAPAddressBookFeeder.h  LDAPInitializer.cpp  PhoneCodeLookup.cpp  PhoneCodeLookup.h  PhoneNumberUtil.cpp  PhoneNumberUtil.h  ResponseItem.cpp  ResponseItem.h  ResponseLoader.cpp  ResponseLoader.h  ResponseTreeItem.cpp  ResponseTreeItem.h  ResponseTreeModel.cpp  ResponseTreeModel.h
src/dbus/: ExternalMediaManager.cpp  ExternalMediaManager.h  GOnnectDBusAPI.cpp  GOnnectDBusAPI.h  KRunnerAdapter.cpp  KRunnerAdapter.h  Notification.cpp  Notification.h  NotificationIcon.cpp  NotificationIcon.h  NotificationManager.cpp  NotificationManager.h  SearchProvider.cpp  SearchProvider.h
src/helper/: AggregatedDirectRoomsOfContact.cpp  AggregatedDirectRoomsOfContact.h  AudioHelper.cpp  AudioHelper.h  ChatMessageTransformer.cpp  ChatMessageTransformer.h  CodeHighlighter.cpp  CodeHighlighter.h  FileContentHelper.cpp  FileContentHelper.h  SecretGenerator.cpp  SecretGenerator.h  SpellCheckHighlighter.cpp  SpellCheckHighlighter.h  TextFormatHelper.cpp  TextFormatHelper.h
src/media/: AudioManager.cpp  AudioManager.h  AudioPort.cpp  AudioPort.h  AudioProcessor.cpp  AudioProcessor.h  Sniffer.cpp  Sniffer.h  VideoManager.cpp  VideoManager.h
src/platform/: BackgroundManager.h  Credentials.cpp  Credentials.h  ExternalMediaManager.h  GlobalShortcuts.h  InhibitHelper.h  NetworkHelper.cpp  NetworkHelper.h  Notification.cpp  Notification.h  NotificationIcon.cpp  NotificationIcon.h  NotificationManager.h  PlatformSession.h  SearchProvider.h  ThemeManager.cpp  ThemeManager.h  UserInfo.cpp  UserInfo.h
src/presence/: ChatUserPresenceStateProvider.cpp  ChatUserPresenceStateProvider.h  GlobalStateAggregator.cpp  GlobalStateAggregator.h  IPresenceStateProvider.cpp  IPresenceStateProvider.h  PresenceState.h  PresenceStateAggregator.cpp  PresenceStateAggregator.h  PresenceStateObjectManager.cpp  PresenceStateObjectManager.h  PresenceStateProxy.cpp  PresenceStateProxy.h  SIPBuddyPresenceStateProvider.cpp  SIPBuddyPresenceStateProvider.h
src/rtt/: RTTMessage.cpp  RTTMessage.h  RTTModel.cpp  RTTModel.h  RTTProvider.cpp  RTTProvider.h  RTTProxyModel.cpp  RTTProxyModel.h
src/sip/: CallHistory.cpp  CallHistory.h  CallHistoryItem.cpp  CallHistoryItem.h  DtmfGenerator.cpp  DtmfGenerator.h  IMHandler.cpp  IMHandler.h  KeychainSettings.h  NumberStat.h  NumberStats.cpp  NumberStats.h  PhoneNumberCallCount.h  Pinger.cpp  Pinger.h  PreferredIdentity.cpp  PreferredIdentity.h  PreferredIdentityValidator.cpp  PreferredIdentityValidator.h  RingTone.cpp  RingTone.h  RingToneFactory.cpp  RingToneFactory.h  Ringer.cpp  (+41 more)
tests/: CMakeLists.txt  CallInfo.test.cpp  CallInfo.test.h  CallRouting.test.cpp  CallRouting.test.h  ChatMessageTransformer.test.cpp  ChatMessageTransformer.test.h  Contacts.test.cpp  Contacts.test.h  Helpers.test.cpp  Helpers.test.h  Presence.test.cpp  Presence.test.h  RemotePartyId.test.cpp  RemotePartyId.test.h  Sip.test.cpp  Sip.test.h  Usb.test.cpp  Usb.test.h
(+665 files in other folders)
